Final abstracts for Testing page

--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -27,15 +27,11 @@ cards:
           - overview
 
     fullWidth: true
-    # TODO: PF to check - need to explain why UK has pillar 3 and 4 (and capacity) but not any nations.
-    # {{ StartDevOnlyBlock }}
-    # GA added 20200722
     abstract: >
-      Number of lab-confirmed positive or negative COVID-19 test results by test type, by date reported.  This is a count of 
-      test results and may include multiple tests for an individual person.  Test types include NHS and PHE tests, commercial tests, 
-      antibody tests and surveillance tests.  Testing capacity is only available for the UK only and is an estimate of the number
-      of tests that can be performed based on availability of staff and resources.
-    # {{ EndDevOnlyBlock }}
+      Number of lab-confirmed positive or negative COVID-19 test results, by date reported.  This is a count of 
+      test results and may include multiple tests for an individual person.  It includes all types of testing (swab
+      testing for antigens, antibody testing and surveillance testing.  Testing capacity is based on reports from 
+      labs on how many tests they have capacity to carry out each day based on availability of staff and resources.
 
     download:
       - plannedCapacityByPublishDate
@@ -114,15 +110,10 @@ cards:
   - heading: Testing by Pillar
     cardType: chart
     fullWidth: true
-    # TODO: PF to check - need to explain why UK has pillar 3 and 4 (and capacity) but not any nations.
-    # {{ StartDevOnlyBlock }}
-    # GA added 20200722
     abstract: >
-      Number of lab-confirmed positive or negative COVID-19 test results by test type, by date reported.  This is a count of 
-      test results and may include multiple tests for an individual person.  Test types include NHS and PHE tests, commercial tests, 
-      antibody tests and surveillance tests.  Testing capacity is shown for the UK only and is an estimate of the number
-      of tests that can be performed based on availability of staff and resources.
-    # {{ EndDevOnlyBlock }}
+      Number of lab-confirmed positive or negative COVID-19 test results, by pillar (type of testing).
+      This is a count of test results and may include multiple tests for an individual person.  Data
+      for antibody and surveillance testing (pillars 3 and 4) are only available for the UK as a whole.
 
     download:
       - newPillarOneTestsByPublishDate
@@ -287,7 +278,7 @@ cards:
 
 # Only shown for UK
 
-  - heading: Pillar 1 (NHS and, in England, PHE) tests by nation
+  - heading: Pillar 1 tests by nation
     cardType: multiAreaStatic
 
     locationAware:
@@ -296,14 +287,11 @@ cards:
           - overview
 
     fullWidth: true
-    # TODO: PF to check
-    # {{ StartDevOnlyBlock }}
-    # GA added 20200722
     abstract: >
-      Number of people with at least one lab-confirmed positive or negative COVID-19 test result, by date reported. 
-      Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
-      different dates between 15th June and 14th July for each nation. National data are not directly comparable. 
-    # {{ EndDevOnlyBlock }}
+      Number of lab-confirmed positive or negative COVID-19 pillar 1 test results.  Pillar 1 testing
+      includes swab testing for COVID-19 processed by NHS and (in England) PHE labs.  This is a count
+      of test results and may include multiple tests for an individual person. 
+
     download:
       - newPillarOneTestsByPublishDate
       - cumPillarOneTestsByPublishDate
@@ -365,4 +353,85 @@ cards:
       - heading: About 
         tabType: metadata
         filename: metadataTabs/testing/tabPillar1TestsByNation.md
+      # {{ EndDevOnlyBlock }}
+
+# Only shown for UK
+
+  - heading: Pillar 2 tests by nation
+    cardType: multiAreaStatic
+
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: >
+      Number of lab-confirmed positive or negative COVID-19 pillar 2 test results.  Pillar 2 testing
+      includes swab testing for COVID-19 processed by commercial partners.  Commercial partner testing
+      was introduced in all parts of the UK in April but data for each nation are not available for all
+      nations on a consistent basis.  Step changes in the series occur when new data sources became
+      available. 
+
+    download:
+      - newPillarTwoTestsByPublishDate
+      - cumPillarTwoTestsByPublishDate
+    tabs:
+      - heading: Daily
+        tabType: chart
+        barType: stack
+        colours: [0, 9, 3, 10] # areaNames in alphabetical order
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
+        fields:
+          - label: ""
+            value: newPillarTwoTestsByPublishDate
+            tooltip: Daily number of COVID-19 tests on the residents of each nation, processed by commercial partners, by date reported
+            type: bar
+            rollingAverage: false
+
+      - heading: Cumulative
+        tabType: chart
+        barType: stack
+        colours: [0, 9, 3, 10] # areaNames in alphabetical order
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
+        fields:
+          - label: ""
+            value: cumPillarTwoTestsByPublishDate
+            tooltip: Cumulative number of COVID-19 tests on the residents of each nation, processed by commercial partners, by date reported
+            type: bar
+            rollingAverage: false
+
+      - heading: Data
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
+        fields:
+          - label: Date reported
+            value: date
+            type: date
+            tooltip: Date reported by the Department of Health and Social Care
+
+          - label: daily
+            value: newPillarTwoTestsByPublishDate
+            type: numeric
+            tooltip: Daily number of COVID-19 tests on the residents of each nation, processed by commercial partners, by date reported
+
+          - label: total
+            value: cumPillarTwoTestsByPublishDate
+            type: numeric
+            tooltip: Cumulative number of COVID-19 tests on the residents of each nation, processed by commercial partners, by date reported
+
+      # {{ StartDevOnlyBlock }}
+      # TODO: GA to write and reference md file.  PF to check - currently base md file says 'all types of test' so need new base for or amend existing one for here?
+      - heading: About 
+        tabType: metadata
+        filename: metadataTabs/testing/tabPillar2TestsByNation.md
       # {{ EndDevOnlyBlock }}
